<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>pangpang</groupId>
    <artifactId>pangpang</artifactId>
    <packaging>pom</packaging>
    <version>0.0.1-SNAPSHOT</version>
    <modules>
        <module>pangpang-util</module>
        <module>pangpang-dao</module>
        <module>pangpang-springrest</module>
    </modules>
    <name>pangpang Maven Webapp</name>
    <url>http://maven.apache.org</url>

    <properties>
        <pangpang-version>0.0.1-SNAPSHOT</pangpang-version>
        <spring-verison>4.2.5.RELEASE</spring-verison>
        <hibernate-version>5.0.0.Final</hibernate-version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <antifraud.version>V1.1.0</antifraud.version>
        <!--<spring.version>4.0.6.RELEASE</spring.version>-->
        <spring.version>4.2.4.RELEASE</spring.version>
        <!--<jackson.version>2.1.5</jackson.version>-->
        <jackson.version>2.6.4</jackson.version>
        <slf4j.version>1.7.7</slf4j.version>
        <httpclient.version>4.3.2</httpclient.version>
        <zookeeper.version>3.4.6</zookeeper.version>
        <hbase.version>0.94.15-cdh4.6.0</hbase.version>
        <hadoop.version>2.0.0-cdh4.6.0</hadoop.version>
        <sars.util.version>1.0.4-SNAPSHOT</sars.util.version>
        <infosec.monitor.version>1.0.5-SNAPSHOT</infosec.monitor.version>
        <ruleengine.bundle.version>1.0.3-SNAPSHOT</ruleengine.bundle.version>
        <dalclient.version>1.0.1.6</dalclient.version>
        <clog.version>3.3.2</clog.version>
        <mongodb.version>3.2.0</mongodb.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!--pangpang-->
            <dependency>
                <groupId>pangpang</groupId>
                <artifactId>pangpang-dao</artifactId>
                <version>${pangpang-verison}</version>
            </dependency>
            <dependency>
                <groupId>pangpang</groupId>
                <artifactId>pangpang-util</artifactId>
                <version>${pangpang-verison}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring-verison}</version>
            </dependency>
            <!--spring-->
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring-verison}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-test</artifactId>
                <version>${spring-verison}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-jdbc</artifactId>
                <version>${spring-verison}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-orm</artifactId>
                <version>${spring-verison}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-beans</artifactId>
                <version>${spring-verison}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring-verison}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-webmvc</artifactId>
                <version>${spring-verison}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-web</artifactId>
                <version>${spring-verison}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-expression</artifactId>
                <version>${spring-verison}</version>
            </dependency>

            <!--db-->
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>5.1.20</version>
            </dependency>
            <dependency>
                <groupId>com.mchange</groupId>
                <artifactId>c3p0</artifactId>
                <version>0.9.5-pre8</version>
            </dependency>

            <dependency>
                <groupId>javax.persistence</groupId>
                <artifactId>persistence-api</artifactId>
                <version>1.0.2</version>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.11</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.1</version>
            </dependency>
        </dependencies>


    </dependencyManagement>


    <build>
        <plugins>
            <plugin>
                <!--执行资源文件的编码格式-->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.capgemini.platina.maven</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.0-platina-1</version>
                <configuration>
                    <goals>deploy</goals>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <argLine>-Xmx512M -XX:MaxPermSize=256M</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.7</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.1.2</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
